--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en-us">
   <head>
+    <title>Sparkled</title>
+    <meta charset="utf-8"/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet" type="text/css"/>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon"/>
