Add simulation/demo. Add viewport and theme-color meta tags.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Sparkled</title>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#4c5c6c"/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet" type="text/css"/>
     <link href="img/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -40,7 +42,45 @@
               </p>
             </div>
 
-            <img src="img/arch.svg" height="100"/>
+            <svg id="arch-demo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 103">
+              <path fill="none" stroke="#222" stroke-width="10" stroke-linecap="round"
+                d="M184.6 95.5c0-48.6-40.4-88-89-88S7.4 46.9 7.4 95.5"/>
+
+              <path fill="none" stroke="#666" stroke-width="2"
+                d="M184.6 95.5c0-48.6-40.4-88-89-88S7.4 46.9 7.4 95.5"/>
+                <circle cx="7.4" cy="95.5" r="2"/>
+                <circle cx="7.9" cy="86.2" r="2"/>
+                <circle cx="9.4" cy="77.2" r="2"/>
+                <circle cx="11.7" cy="68.5" r="2"/>
+                <circle cx="14.8" cy="60.2" r="2"/>
+                <circle cx="18.8" cy="52.3" r="2"/>
+                <circle cx="23.5" cy="44.8" r="2"/>
+                <circle cx="28.9" cy="38" r="2"/>
+                <circle cx="34.9" cy="31.6" r="2"/>
+                <circle cx="41.6" cy="25.9" r="2"/>
+                <circle cx="48.7" cy="20.9" r="2"/>
+                <circle cx="56.4" cy="16.6" r="2"/>
+                <circle cx="64.6" cy="13.1" r="2"/>
+                <circle cx="73.1" cy="10.4" r="2"/>
+                <circle cx="82" cy="8.5" r="2"/>
+                <circle cx="91.2" cy="7.6" r="2"/>
+                <circle cx="100.5" cy="7.6" r="2"/>
+                <circle cx="109.7" cy="8.6" r="2"/>
+                <circle cx="118.5" cy="10.5" r="2"/>
+                <circle cx="127.1" cy="13.3" r="2"/>
+                <circle cx="135.2" cy="16.8" r="2"/>
+                <circle cx="142.9" cy="21.1" r="2"/>
+                <circle cx="150.1" cy="26.2" r="2"/>
+                <circle cx="156.8" cy="31.9" r="2"/>
+                <circle cx="162.9" cy="38.2" r="2"/>
+                <circle cx="168.3" cy="45" r="2"/>
+                <circle cx="173.1" cy="52.4" r="2"/>
+                <circle cx="177.1" cy="60.3" r="2"/>
+                <circle cx="180.3" cy="68.6" r="2"/>
+                <circle cx="182.6" cy="77.3" r="2"/>
+                <circle cx="184.1" cy="86.2" r="2"/>
+                <circle cx="184.6" cy="95.5" r="2"/>
+            </svg>
           </div>
         </section>
       </div>
