--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/colors/color.css"/>
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
   <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png"/>
   <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png"/>
