Remove site template metadata

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Sparkled: The modern LED sequencer"/>
   <meta name="author" content="Chris Parton">
   <meta name="keywords" content="sparkled, led, sequencer, chrislights"/>
-  <meta property="og:title" content="Creative Template"/>
+  <meta property="og:title" content="Sparkled"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
   <meta property="og:image" content=""/>
