Add JProfiler link

--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
           </div>
         </div>
       </div>
+      <div class="row mt-4">
+        <div class="col-md-12 text-grey">
+          Special thanks to EJ-Technologies for providing an Open Source license for <a href="https://www.ej-technologies.com/products/jprofiler/overview.html" target="_blank">JProfiler, the award winning all-in-one Java Profiler</a>.
+        </div>
+      </div>
     </div>
   </div>
   <div class="section">
