Update textual content

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="col-md-4 mt-4 mt-md-0">
           <div class="concept-box">
-            <h5 class="text-white">Open</h5>
+            <h5 class="text-white">Free</h5>
             <p class="text-grey">Sparkled is and will always be open source. You can use it for free, and build whatever you want on top of the Sparkled API to make your installation extra amazing.</p>
           </div>
         </div>
@@ -133,7 +133,7 @@
       </div>
       <div class="row">
         <div class="col-md-6 mt-5">
-          <h4 class="text-white">3. Create some playlists</h4>
+          <h4 class="text-white">3. Build your playlists</h4>
           <p class="text-grey">Group your sequences into playlists, which can be scheduled to run whenever you like.</p>
         </div>
         <div class="col-md-6 mt-5">
@@ -174,7 +174,7 @@
                 <div class="card-body">
                   <h6 class="text-white">What skills do I need?</h6>
                   <p class="text-grey">To install Sparkled and start creating sequences, all you need is a computer.</p>
-                  <p class="text-grey">When you're ready to build your installation, you'll be doing some simple wiring, soldering and networking. Don't worry, you'll get plenty of help along the way!</p>
+                  <p class="text-grey">When you're ready to build your installation, you'll be doing some simple wiring, soldering and networking. Don't worry, the Sparkled documentation is there to help you along the way!</p>
                 </div>
               </div>
             </div>
