--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <meta property="og:site_name" content="Sparkled"/>
   <meta property="og:description" content="Sparkled: The modern LED sequencer"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="theme-color" content="#212121"/>
-  <meta name="msapplication-navbutton-color" content="#212121"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
+  <meta name="theme-color" content="#7b5eea"/>
+  <meta name="msapplication-navbutton-color" content="#7b5eea"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="#7b5eea"/>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet"/>
@@ -27,9 +27,6 @@
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/colors/color.css"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
-  <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png"/>
-  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png"/>
 </head>
 
 <body>
