Update release date to reflect reality

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordion-snd">
                 <div class="card-body">
                   <h6 class="text-white">When will Sparkled be available?</h6>
-                  <p class="text-grey">A beta version of Sparkled is slated for release in late 2019 or early 2020.</p>
+                  <p class="text-grey">Sparkled is still a work in progress, there's no set release date yet, unfortunately!</p>
                 </div>
               </div>
             </div>
